# money_banker

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  index.html  package-lock.json  package.json
migrations/: 20260122202049_create_test_table.sql
src/: App.tsx  index.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20260127000001_create_users.sql  20260127000002_create_categories.sql  20260127000003_create_transactions.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: callback_server.rs  google.rs  mod.rs  token_storage.rs  tokens.rs
src-tauri/src/config/: settings.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/db/repository/: categories.rs  mod.rs  transactions.rs  users.rs
src-tauri/src/error/: mod.rs
src-tauri/src/models/: category.rs  mod.rs  transaction.rs  user.rs
src-tauri/src/services/: category_service.rs  mod.rs  transaction_service.rs  user_service.rs
src/components/: AddTransaction.tsx  Dashboard.tsx  Header.tsx  TransactionList.tsx
src/types/: index.ts
