[package]
name = "montlhy_bank_usage"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
    "rust_decimal",
    "chrono"
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.40"